# haskell_prpr_parser

./: Main.hs  README.md  Tests.hs  Types.hs  sample_script.pr
.stack-work/: stack.sqlite3
.stack-work/ghci/33497509/: cabal_macros.h
.stack-work/install/aarch64-osx/7bf42c0f9620a4d9d56975f6f99a7dbf08dcdf95b9ae7128fc70f1b337521741/9.4.5/lib/aarch64-osx-ghc-9.4.5/: libHSParser-1-Fl0Ezy7VbW0B8luKbuX2bd-ghc9.4.5.dylib  libHSParser-1-KGwnI24gaxi6lc4fn4pmfZ-ghc9.4.5.dylib
.stack-work/install/aarch64-osx/7bf42c0f9620a4d9d56975f6f99a7dbf08dcdf95b9ae7128fc70f1b337521741/9.4.5/lib/aarch64-osx-ghc-9.4.5/Parser-1-Fl0Ezy7VbW0B8luKbuX2bd/: Parser.dyn_hi  Types.hi
.stack-work/install/aarch64-osx/7bf42c0f9620a4d9d56975f6f99a7dbf08dcdf95b9ae7128fc70f1b337521741/9.4.5/lib/aarch64-osx-ghc-9.4.5/Parser-1-KGwnI24gaxi6lc4fn4pmfZ/: Parser.dyn_hi  Parser.hi  Types.dyn_hi  Types.hi
.stack-work/install/aarch64-osx/7bf42c0f9620a4d9d56975f6f99a7dbf08dcdf95b9ae7128fc70f1b337521741/9.4.5/pkgdb/: Parser-1-KGwnI24gaxi6lc4fn4pmfZ.conf  package.cache
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.2/: Parser-1-inplace.conf  package.cache
project/: Main.hs  Notes  Parser.cabal  Parser.hs  Types.hs
project/.stack-work/: stack.sqlite3
project/.stack-work/ghci/bac2ef19/: cabal_macros.h
project/.stack-work/install/aarch64-osx/7bf42c0f9620a4d9d56975f6f99a7dbf08dcdf95b9ae7128fc70f1b337521741/9.4.5/lib/aarch64-osx-ghc-9.4.5/Parser-1-Fl0Ezy7VbW0B8luKbuX2bd/: Parser.hi  Types.dyn_hi
project/.stack-work/install/aarch64-osx/7bf42c0f9620a4d9d56975f6f99a7dbf08dcdf95b9ae7128fc70f1b337521741/9.4.5/pkgdb/: Parser-1-Fl0Ezy7VbW0B8luKbuX2bd.conf  package.cache
